# eoapi-template

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  app.py  config.py  config.yaml  config.yaml.example  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yaml  format.yaml  tests.yaml
cdk_eoapi/: pgStacInfra.py
dockerfiles/: browser_config.js
eoapi_template/: pgStacInfra.py  vpc.py
infrastructure/: app.py  config.py  pgStacInfra.py  vpc.py
