[project]
name = "eoapi-template"
version = "0.1.0"
description = "Template repository to deploy eoapi on AWS using the eoapi-cdk constructs or locally with Docker."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3==1.24.15",
    "eoapi-cdk==7.4.1",
    "pydantic-settings[yaml]==2.2.1",
    "typing-extensions>=4.14.0",
]
